--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,39 @@
 @import "tailwindcss";
+
+/* ---------------------- */
+/* Night Mode Button */
+
+.toggleTheme {
+  background-color: transparent;
+  color: #333;
+  padding: 10px 10px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.toggleTheme:hover {
+  cursor: pointer;
+  color: #fff;
+}
+
+.toggleTheme:hover::after {
+  transform: translate(-50%, -50%);
+  animation: glow 1.5s infinite ease-in-out;
+}
+
+@keyframes glow {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.2);
+    opacity: 0.5;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+/* ---------------------- */
