--- a/client/src/components/MantineUI/Nav.module.scss
+++ b/client/src/components/MantineUI/Nav.module.scss
@@ -82,6 +82,6 @@ $mantine-breakpoint-xl: 1400px;
     light-dark(var(--mantine-color-gray-1), var(--mantine-color-dark-5));
 }
 
-.loginWindow {
-  border-radius: 24px;
+.modalWindow {
+  border-radius: 24px !important;
 }
