--- a/client/src/components/dashboard/Navbar.module.scss
+++ b/client/src/components/dashboard/Navbar.module.scss
@@ -25,7 +25,7 @@
 }
 
 .navbarMain {
-  flex: 1;
+  flex: 10;
 }
 
 .header {
@@ -36,6 +36,9 @@
 }
 
 .footer {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
   padding-top: var(--mantine-spacing-md);
   margin-top: var(--mantine-spacing-md);
   border-top: 1px solid
