--- a/client/src/components/home/Nav.module.scss
+++ b/client/src/components/home/Nav.module.scss
@@ -18,24 +18,63 @@ $mantine-breakpoint-xl: 1400px;
   );
 }
 
+// .header {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   width: 100%;
+//   height: 60px;
+//   z-index: 1000; /* Ensures the header stays on top of other elements */
+//   padding-left: var(--mantine-spacing-md);
+//   padding-right: var(--mantine-spacing-md);
+//   //
+//   //border-bottom: 1px solid
+//   //  light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+//   //background-color: light-dark(
+//   //  var(--mantine-color-gray-0),
+//   //  var(--mantine-color-dark-7)
+//   //);
+//   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Optional: Adds shadow for better visibility */
+// }
+
 .header {
+  z-index: 1000; /* high z-index to be on top */
+  position: fixed; /* changed from relative */
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: transparent; /* hide bg under wave */
+  overflow: visible; /* keep wave visible */
+  padding: 10px 50px;
+}
+
+.headerContent {
+  position: relative;
+  z-index: 2; // ensures content appears above the wave
+  padding-bottom: 40px; // make room for the wave
+}
+
+.wave {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   width: 100%;
-  height: 60px;
-  z-index: 1000; /* Ensures the header stays on top of other elements */
-  padding-left: var(--mantine-spacing-md);
-  padding-right: var(--mantine-spacing-md);
-  //
-  //border-bottom: 1px solid
-  //  light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
-  //background-color: light-dark(
-  //  var(--mantine-color-gray-0),
-  //  var(--mantine-color-dark-7)
-  //);
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Optional: Adds shadow for better visibility */
+  height: 200px;
+  z-index: 1;
+
+  svg {
+    width: 120%;
+    height: 100%;
+    display: block;
+  }
+
+  path {
+    fill: #f2f1e4; // match navbar color
+    fill-opacity: 1;
+    filter: drop-shadow(0 4px 6px rgba(0, 0, 0, 0.4));
+  }
 }
 
 .link {
@@ -45,7 +84,7 @@ $mantine-breakpoint-xl: 1400px;
   padding-left: var(--mantine-spacing-md);
   padding-right: var(--mantine-spacing-md);
   text-decoration: none;
-  color: light-dark(var(--mantine-color-white), var(--mantine-color-white));
+  color: #174dc4;
   font-weight: 500;
   font-size: var(--mantine-font-size-sm);
 
