--- a/client/src/components/home/Nav.module.scss
+++ b/client/src/components/home/Nav.module.scss
@@ -78,6 +78,7 @@ $mantine-breakpoint-xl: 1400px;
 }
 
 .link {
+  position: relative;
   display: flex;
   align-items: center;
   height: 100%;
@@ -93,9 +94,28 @@ $mantine-breakpoint-xl: 1400px;
     width: 100%;
   }
 
-  &:hover {
-    @include hover-link;
+  &::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    border-radius: 4px;
+    background-color: #18272f;
+    bottom: 10px;
+    left: 0;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform 0.3s ease-in-out;
   }
+
+  &:hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
+  }
+
+  // &:hover {
+  //   @include hover-link;
+  // }
 }
 
 .subLink {
